# OpenCV_Practice

./: CMakeLists.txt  Readme.txt  main.cpp  mainCH2.cpp  mainCH3.cpp  mainCH6B.cpp  mainCH7.cpp
